<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Your Name"
                android:inputType="textPersonName"
                android:textColor="#FFFFFF" >
            </EditText>
            
            <EditText
                android:id="@+id/editTextMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Your Number"
                android:inputType="phone"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/editTextPostalAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Your Address"
                android:textColor="#FFFFFF"
                android:ems="10"
                android:inputType="textMultiLine" /> 


            <TextView
                android:id="@+id/textViewAddContacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="Add Contacts"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewTermsAndConditions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:text="@string/termsAndConditions"
                android:textColor="#AAAAAA"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <CheckBox
                    android:id="@+id/checkBoxTC1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@xml/custom_checkbox"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/agreement_1"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <CheckBox
                    android:id="@+id/checkBoxTC2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@xml/custom_checkbox"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/agreement_2"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <CheckBox
                    android:id="@+id/checkBoxTC3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@xml/custom_checkbox"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/agreement_3"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

            </LinearLayout>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <CheckBox
                    android:id="@+id/checkBoxTC4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@xml/custom_checkbox"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/agreement_4"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" >

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="finish"
                android:text="@string/cancel"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
            
            <Button
                android:id="@+id/buttonOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/okay"
                android:onClick="okay"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>