<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="20dp"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/notification_message"
        android:textColor="#DDDDDD"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignRight="@+id/textView"
        android:layout_below="@id/textView"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/buttonNotificationCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:onClick="cancel"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/buttonNotificationOkay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:onClick="stopDial100"
            android:text="@string/okay" />

    </LinearLayout>

<!--     <ImageView
        android:id="@+id/imageView1"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignTop="@+id/textView1"
        android:layout_margin="1dp"
        android:src="@anim/notification_blinker" /> -->

</RelativeLayout>
